Added arrow behaviour on jquery, fixed responsibility

--- a/imports/ui/tour/tour.html
+++ b/imports/ui/tour/tour.html
@@ -1,7 +1,7 @@
 <template name="tour">
   <div id="tour" class="tour">
     <div class="container">
-      <p class="h1 title">Perfomances</p>
+      <p class="h1 title">Performances</p>
       <a href="http://www.songkick.com/artists/8830564" class="songkick-widget" data-theme="dark" data-other-artists="on" data-detect-style="true" data-font-color="#f5f5f5" data-background-color="#222">MY LAST ATTEMPT PERFOMANCES</a>
     </div>
   </div>
