--- a/imports/ui/video/video.html
+++ b/imports/ui/video/video.html
@@ -2,8 +2,8 @@
   <div id="video" class="video">
     <div class="container">
       <p class="h1 title">Latest Videos</p>
-      <div class="youtube">
-        <iframe width="100%" height="650px" src="https://www.youtube.com/embed/eA3A7q50CBs?list=UUwzqedkAOWy6Hk_no8gZjQA" frameborder="0" allowfullscreen></iframe>
+      <div class="youtube embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="100%" height="650" src="https://www.youtube.com/embed/ucEIBdGKbrg?list=UUwzqedkAOWy6Hk_no8gZjQA" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
