--- a/client/main.html
+++ b/client/main.html
@@ -7,4 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+  <meta property="og:title" content="My Last Attempt Band" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://mylastattempt.com/" />
+  <meta property="og:image" content="/img/logo.png" />
+  <meta property="og:description" content="Progressive rock band from Kyiv, Ukraine.
+  Progressive Metalcore, Post-Hardcore" />
 </head>
