--- a/client/main.html
+++ b/client/main.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="My Last Attempt Band" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://mylastattempt.com/" />
-  <meta property="og:image" content="http://mylastattempt.com/img/logo@big.jpg" />
+  <meta property="og:image" content="http://mylastattempt.com/img/logoBig.jpg" />
   <meta property="og:site_name" content="My Last Attempt Band"/>
   <meta property="og:description" content="Progressive rock band from Ukraine, Kiev.
   Genre: Progressive Metalcore\Post-Hardcore." />
