--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
   <title>My Last Attempt Band</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Progressive misical band from Ukraine, Kiev">
+  <meta name="description" content="Progressive rock band from Ukraine, Kiev">
   <meta name="keywords" content="Progressive Metalcore, Post-Hardcore">
   <meta name="author" content="Vlad Kampov">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
