Changed name in contact block

--- a/imports/ui/contacts/contacts.html
+++ b/imports/ui/contacts/contacts.html
@@ -3,7 +3,7 @@
     <div class="container">
       <p class="h1 title">Contact us</p>
       <address>
-        <span class="h3"><strong>Anastasia Yurhanova</strong></span><br>
+        <span class="h3"><strong>Anastasiia Yurhanova</strong></span><br>
         <strong>Manager</strong><br><br>
         <span class="h4"><a href="tel:+380631536546">+380 63 153 6546</a><br>
         <a href="tel:+380991471782">+380 99 147 1782</a><br><br>
