Added google auth

--- a/client/main.html
+++ b/client/main.html
@@ -14,4 +14,5 @@
   <meta property="og:site_name" content="My Last Attempt Band"/>
   <meta property="og:description" content="Progressive rock band from Ukraine, Kiev.
   Genre: Progressive Metalcore\Post-Hardcore." />
+  <meta name="google-site-verification" content="lkdkJpKxpwqFz0sdUdRR6aw3iPZ-AzjqI-Dvc_ublxI" />
 </head>
