Added VK Messages

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -8,4 +8,13 @@
   {{> footer}}
   <script src="//widget.songkick.com/widget.js"></script>
   {{> ga}}
+
+
+  <script type="text/javascript" src="//vk.com/js/api/openapi.js?127"></script>
+
+  <!-- VK Widget -->
+  <div id="vk_community_messages"></div>
+  <script type="text/javascript">
+  VK.Widgets.CommunityMessages("vk_community_messages", 96510423, {});
+  </script>
 </body>
