--- a/client/main.html
+++ b/client/main.html
@@ -15,4 +15,5 @@
   <meta property="og:description" content="Progressive rock band from Ukraine, Kiev.
   Genre: Progressive Metalcore\Post-Hardcore." />
   <meta name="google-site-verification" content="lkdkJpKxpwqFz0sdUdRR6aw3iPZ-AzjqI-Dvc_ublxI" />
+  <script type="text/javascript" src="//vk.com/js/api/openapi.js?127"></script>
 </head>
