--- a/imports/ui/contacts/contacts.html
+++ b/imports/ui/contacts/contacts.html
@@ -1,14 +1,23 @@
 <template name="contacts">
   <div id="contacts" class="contacts">
     <div class="container">
-      <p class="h1 title">Contact us</p>
-      <address>
-        <span class="h3"><strong>Anastasia Yurhanova</strong></span><br>
-        <strong>Manager</strong><br><br>
-        <span class="h4"><a href="tel:+380631536546">+380 63 153 6546</a><br>
-        <a href="tel:+380991471782">+380 99 147 1782</a><br><br>
-        <a href="mailto:info@mylastattempt.com">info@mylastattempt.com</a></span>
-      </address>
+      <p class="h1 title">Contact us
+      <br><small>Management, Concerts, Commercial</small></p>
+      <div class="col-md-6">
+        <address>
+          <span class="h3"><strong>Anastasia Yurhanova</strong></span><br><br>
+          <span class="h4"><a href="tel:+380631536546">+380 63 153 6546</a><br>
+          <a href="tel:+380991471782">+380 99 147 1782</a><br><br>
+          <a href="mailto:info@mylastattempt.com">info@mylastattempt.com</a></span>
+        </address>
+      </div>
+      <div class="col-md-6">
+        <address>
+          <span class="h3"><strong>Dominika Novikova</strong></span><br><br>
+          <span class="h4"><a href="tel:+380937213995">+380 93 721 3995</a><br><br>
+          <a href="mailto:info@mylastattempt.com">info@mylastattempt.com</a></span>
+        </address>
+      </div>
     </div>
   </div>
 </template>
