Meteor updated. Remove Dominika from manager contacts block

--- a/imports/ui/contacts/contacts.html
+++ b/imports/ui/contacts/contacts.html
@@ -3,7 +3,7 @@
     <div class="container">
       <p class="h1 title">Contact us
       <br><small>Management, Concerts, Commercial</small></p>
-      <div class="col-md-6">
+      <div>
         <address>
           <span class="h3"><strong>Anastasia Yurhanova</strong></span><br><br>
           <span class="h4"><a href="tel:+380631536546">+380 63 153 6546</a><br>
@@ -11,13 +11,13 @@
           <a href="mailto:info@mylastattempt.com">info@mylastattempt.com</a></span>
         </address>
       </div>
-      <div class="col-md-6">
+      <!-- <div class="col-md-6">
         <address>
           <span class="h3"><strong>Dominika Novikova</strong></span><br><br>
           <span class="h4"><a href="tel:+380937213995">+380 93 721 3995</a><br><br>
           <a href="mailto:info@mylastattempt.com">info@mylastattempt.com</a></span>
         </address>
-      </div>
+      </div> -->
     </div>
   </div>
 </template>
