Updated with a new logo and photos. Tracks removed

--- a/imports/ui/footer/footer.html
+++ b/imports/ui/footer/footer.html
@@ -1,7 +1,7 @@
 <template name="footer">
   <footer>
     <div class="container">
-      <small>2015 - 2016 <i class="fa fa-copyright" aria-hidden="true"> by <a href="//kampov.com">Vlad Kampov</a></i></small>
+      <small>2015 - 2017 <i class="fa fa-copyright" aria-hidden="true"></i></small>
     </div>
   </footer>
 </template>
