--- a/imports/ui/social/social.html
+++ b/imports/ui/social/social.html
@@ -4,7 +4,7 @@
 			<li><a class="vk" href="//vk.com/mylastattempt"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
 			<li><a class="fb" href="//facebook.com/mylastattemptband/"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
 			<li><a class="insta" href="//instagram.com/mylastattemptband/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-			<li><a class="twi" href="//twitter.com/my_lastattempt"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+			<li><a class="twi" href="//twitter.com/MyLastAttempt_"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 			<li><a class="soundcloud" href="//soundcloud.com/my-last-attempt"><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
 			<li><a class="youtube" href="//youtube.com/channel/UCwzqedkAOWy6Hk_no8gZjQA"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
 		</ul>
