--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -1,7 +1,16 @@
 <template name="header">
   <header>
     {{> social}}
-    <div class="main-logo"></div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="main-logo"></div>
+      </div>
+      <div class="col-md-8">
+        <div class="black">
+          <div class="album"></div>
+        </div>
+      </div>
+    </div>
     <p class="h2 arrow-down"><a href="#tour"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a></p>
   </header>
 </template>
