--- a/imports/ui/social/social.html
+++ b/imports/ui/social/social.html
@@ -1,12 +1,25 @@
 <template name="social">
 	<div class="social-buttons">
-		<ul class="list-inline">
-			<li><a class="vk" href="//vk.com/mylastattempt"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-			<li><a class="fb" href="//facebook.com/mylastattemptband/"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
-			<li><a class="insta" href="//instagram.com/mylastattemptband/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-			<li><a class="twi" href="//twitter.com/MyLastAttempt_"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-			<li><a class="soundcloud" href="//soundcloud.com/my-last-attempt"><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
-			<li><a class="youtube" href="//youtube.com/channel/UCwzqedkAOWy6Hk_no8gZjQA"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-		</ul>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<ul class="list-inline text-left">
+						<li><a href="#music">Music</a></li>
+						<li><a href="#tour">Tour</a></li>
+						<li><a href="#tour">Video</a></li>
+						<li><a href="#tour">Contact</a></li>
+					</ul>
+				</div>
+				<div class="col-sm-6 text-right">
+					<ul class="list-inline">
+						<li><a class="fb" href="//facebook.com/mylastattemptband/"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
+						<li><a class="insta" href="//instagram.com/mylastattemptband/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						<li><a class="twi" href="//twitter.com/MyLastAttempt_"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a class="vk" href="//vk.com/mylastattempt"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+						<li><a class="youtube" href="//youtube.com/channel/UCwzqedkAOWy6Hk_no8gZjQA"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
 </template>
