--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -8,6 +8,13 @@
       <div class="col-md-8">
         <div class="black">
           <div class="album"></div>
+          <h2>Alaible now</h2>
+          <ul>
+            <li>iTunes / Apple Music</li>
+            <li>Google Play</li>
+            <li>Spotify</li>
+            <li><small>#MLAcapillaries</small></li>
+          </ul>
         </div>
       </div>
     </div>
