New single fully update

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -2,7 +2,13 @@
   {{> preloader}}
   {{> header}}
   {{> tour}}
-  {{> video}}
+  <div class="row">
+  	<!-- <div class="col-md-6"> -->
+  		
+  		<!-- {{> video}} -->
+  	<!-- </div> -->
+    <!--  -->
+  </div> 
   {{> contacts}}
   {{> footer}}
   <script src="//widget.songkick.com/widget.js"></script>
