--- a/imports/ui/social/social.html
+++ b/imports/ui/social/social.html
@@ -2,12 +2,13 @@
 	<div class="social-buttons">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-sm-6 hidden-sm hidden-xs">
 					<ul class="list-inline text-left">
-						<li><a href="#music">Music</a></li>
-						<li><a href="#tour">Tour</a></li>
-						<li><a href="#tour">Video</a></li>
-						<li><a href="#tour">Contact</a></li>
+						<li><a href="/" class="logo"><img src="/img/logo.png" width="20" alt=""/></a></li>
+						<!-- <li><a href="#music">Music</a></li> -->
+					<!-- 	<li><a href="#tour">Tour</a></li>
+						<li><a href="#video">Video</a></li>
+						<li><a href="#contacts">Contact</a></li> -->
 					</ul>
 				</div>
 				<div class="col-sm-6 text-right">
