--- a/imports/ui/video/video.html
+++ b/imports/ui/video/video.html
@@ -3,7 +3,7 @@
     <div class="container">
       <p class="h1 title">Latest Videos</p>
       <div class="youtube embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="100%" height="650" src="https://www.youtube.com/embed/0-E6_wxz-WI?list=UUwzqedkAOWy6Hk_no8gZjQA" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/cnXQoDv55lQ?showinfo=0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
