Added links to music

--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -17,9 +17,9 @@
         <img class="image-responsive album" src="/img/album.jpg" alt="" width="300"/>
       </p>
       <ul class="list-inline">
-        <li><a href="" class="download apple"></a></li>
-        <li><a href="" class="download google"></a></li>
-        <li><a href="" class="download spotify"></a></li>
+        <li><a href="https://goo.gl/Zee7Wp" class="download apple"></a></li>
+        <li><a href="https://goo.gl/VqK5C3" class="download google"></a></li>
+        <li><a href="https://goo.gl/bEyChf" class="download spotify"></a></li>
       </ul>
 
       <p><small>or in your favorite service whatever it is</small></p>
