--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -23,7 +23,7 @@
       </ul>
 
       <p><small>or in your favorite service whatever it is</small></p>
-      <p><br/></p>
+      <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332079330&amp;color=222222&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p>
     </div>
   </header>
   <script>        
