Preparation for ttsn release

--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -12,20 +12,45 @@
     <p class="h2 arrow-down"><a href="#tour"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a></p> -->
 
     <div class="container">
-      <h1 class="title">new single out now</h1>
+      <h1 class="title">get new single now</h1>
       <p>
-        <img class="image-responsive album" src="/img/album.jpg" alt="" width="300"/>
+        <img class="image-responsive album" src="/img/cover_ttsn.jpg" alt="" width="300"/>
       </p>
       <ul class="list-inline">
-        <li><a href="https://goo.gl/Zee7Wp" class="download apple"></a></li>
-        <li><a href="https://goo.gl/VqK5C3" class="download google"></a></li>
-        <li><a href="https://goo.gl/bEyChf" class="download spotify"></a></li>
+        <li><a href="https://goo.gl/DVvnZF" class="download apple"></a></li>
+        <li><a href="" class="download google"></a></li>
+        <li><a href="" class="download spotify"></a></li>
       </ul>
 
       <p><small>or in your favorite service whatever it is</small></p>
       <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332079330&amp;color=222222&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p>
     </div>
   </header>
+  <div class="previousRelease text-center">
+    <div class="container">
+      <h2>PREVIOUS RELEASE</h2>
+      <p>&nbsp;</p>
+      <div class="row">
+        <div class="col-sm-4">
+          <p>
+            <img class="image-responsive album" src="/img/album.jpg" alt="" width="200"/>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <ul class="list-unstyled">
+            <li><a href="https://goo.gl/Zee7Wp" class="download apple"></a></li>
+            <li><a href="https://goo.gl/VqK5C3" class="download google"></a></li>
+            <li><a href="https://goo.gl/bEyChf" class="download spotify"></a></li>
+          </ul>
+
+          <p><small>or just find it where you want</small></p>
+        </div>
+        <div class="col-sm-4">
+          <p><iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332079330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></p>
+        </div>
+      </div>
+    </div>
+  </div>
   <script>        
   var mySwiper = new Swiper ('.swiper-container', {
     // Optional parameters
