Added llinks for TTSN

--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -18,12 +18,12 @@
       </p>
       <ul class="list-inline">
         <li><a href="https://goo.gl/DVvnZF" class="download apple"></a></li>
-        <li><a href="" class="download google"></a></li>
-        <li><a href="" class="download spotify"></a></li>
+        <li><a href="https://goo.gl/FDF5R6" class="download google"></a></li>
+        <li><a href="https://goo.gl/7z2njV" class="download spotify"></a></li>
       </ul>
 
       <p><small>or in your favorite service whatever it is</small></p>
-      <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332079330&amp;color=222222&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p>
+      <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335868092%3Fsecret_token%3Ds-M8ch0&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p>
     </div>
   </header>
   <div class="previousRelease text-center">
