apps music contest

--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -10,7 +10,11 @@
 <!--       </div>
     </div>
     <p class="h2 arrow-down"><a href="#tour"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a></p> -->
-
+    <div class="vote">
+      <div class="container text-center">
+        <h2> <img src="https://apps-m.com/img/logo.png" alt="apps" width="30px" class="hidden-xs"> VOTE FOR MY LAST ATTEMPT AT <a href="https://apps-m.com/user/index/436/">APPS MUSIC CONTEST</a> <img src="https://apps-m.com/img/logo.png" alt="apps" width="30px" class="hidden-xs"> </h2>
+      </div>
+    </div>
     <div class="container">
       <h1 class="title">get new single now</h1>
       <p>
