--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -10,30 +10,50 @@
 <!--       </div>
     </div>
     <p class="h2 arrow-down"><a href="#tour"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a></p> -->
-    <div class="vote">
+    <!-- <div class="vote">
       <div class="container text-center">
-        <h2> <img src="https://apps-m.com/img/logo.png" alt="apps" width="30px" class="hidden-xs"> VOTE FOR MY LAST ATTEMPT AT <a href="https://apps-m.com/user/index/436/">APPS MUSIC CONTEST</a> <img src="https://apps-m.com/img/logo.png" alt="apps" width="30px" class="hidden-xs"> </h2>
+        <h2> <img src="https://apps-m.com/img/logo.png" alt="apps" width="30px" class="hidden-xs"> VOTE FOR US AT <a href="https://apps-m.com/user/index/436/">APPS MUSIC CONTEST</a> <img src="https://apps-m.com/img/logo.png" alt="apps" width="30px" class="hidden-xs"> </h2>
       </div>
-    </div>
+    </div> -->
     <div class="container">
-      <h1 class="title">get new single now</h1>
+      <h1 class="title">get new single now<br/><small>and wait for an album</small></h1>
       <p>
-        <img class="image-responsive album" src="/img/cover_ttsn.jpg" alt="" width="300"/>
+        <img class="image-responsive album" src="/img/cover_hopeless.jpg" alt="" width="300"/>
       </p>
       <ul class="list-inline">
-        <li><a href="https://goo.gl/DVvnZF" class="download apple"></a></li>
-        <li><a href="https://goo.gl/FDF5R6" class="download google"></a></li>
-        <li><a href="https://goo.gl/7z2njV" class="download spotify"></a></li>
+        <li><a href="https://goo.gl/" class="download apple"></a></li>
+        <li><a href="https://goo.gl/" class="download google"></a></li>
+        <li><a href="https://goo.gl/" class="download spotify"></a></li>
       </ul>
 
       <p><small>or in your favorite service whatever it is</small></p>
-      <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335868092%3Fsecret_token%3Ds-M8ch0&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p>
+      <!-- <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335868092%3Fsecret_token%3Ds-M8ch0&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p> -->
     </div>
   </header>
   <div class="previousRelease text-center">
     <div class="container">
-      <h2>PREVIOUS RELEASE</h2>
+      <h2>PREVIOUS RELEASES</h2>
       <p>&nbsp;</p>
+      <div class="row">
+        <div class="col-sm-4">
+          <p>
+            <img class="image-responsive album" src="/img/cover_ttsn.jpg" alt="" width="200"/>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <ul class="list-unstyled">
+            <li><a href="https://goo.gl/DVvnZF" class="download apple"></a></li>
+            <li><a href="https://goo.gl/FDF5R6" class="download google"></a></li>
+            <li><a href="https://goo.gl/7z2njV" class="download spotify"></a></li>
+          </ul>
+
+          <p><small>or just find it where you want</small></p>
+        </div>
+        <div class="col-sm-4">
+          <p><iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335868092&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></p>
+        </div>
+      </div>
+      <hr />
       <div class="row">
         <div class="col-sm-4">
           <p>
@@ -47,7 +67,7 @@
             <li><a href="https://goo.gl/bEyChf" class="download spotify"></a></li>
           </ul>
 
-          <p><small>or just find it where you want</small></p>
+          <p><small>actually you can find it anywhere</small></p>
         </div>
         <div class="col-sm-4">
           <p><iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332079330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></p>
