--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -16,18 +16,19 @@
       </div>
     </div> -->
     <div class="container">
-      <h1 class="title">get new single now<br/><small>and wait for an album</small></h1>
+      <h1 class="title">get new single now<br/><small>and wait for the upcoming album</small></h1>
       <p>
         <img class="image-responsive album" src="/img/cover_hopeless.jpg" alt="" width="300"/>
       </p>
       <ul class="list-inline">
-        <li><a href="https://goo.gl/" class="download apple"></a></li>
-        <li><a href="https://goo.gl/" class="download google"></a></li>
-        <li><a href="https://goo.gl/" class="download spotify"></a></li>
+        <li><a href="https://itunes.apple.com/ua/album/hopeless-single/id1276592213" class="download apple" onclick="ga('send', 'event', 'Link', 'Click', 'iTunes Hopeless');"></a></li>
+        <li><a href="https://play.google.com/music/m/Bem773l5zepsyj2k43odkyq6flq?t=Hopeless_-_My_Last_Attempt" class="download google" onclick="ga('send', 'event', 'Link', 'Click', 'Google Play Hopeless');"></a></li>
+        <li><a href="https://open.spotify.com/album/6jMyJSMG9VIzKPZ1ZOpbJy" class="download spotify" onclick="ga('send', 'event', 'Link', 'Click', 'Spotify Hopeless');"></a></li>
       </ul>
 
       <p><small>or in your favorite service whatever it is</small></p>
       <!-- <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335868092%3Fsecret_token%3Ds-M8ch0&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p> -->
+      <iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/342463187&amp;color=222222&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
     </div>
   </header>
   <div class="previousRelease text-center">
@@ -42,9 +43,9 @@
         </div>
         <div class="col-sm-4">
           <ul class="list-unstyled">
-            <li><a href="https://goo.gl/DVvnZF" class="download apple"></a></li>
-            <li><a href="https://goo.gl/FDF5R6" class="download google"></a></li>
-            <li><a href="https://goo.gl/7z2njV" class="download spotify"></a></li>
+            <li><a href="https://itunes.apple.com/album/id1255934532" class="download apple" onclick="ga('send', 'event', 'Link', 'Click', 'iTunes TTSN');"></a></li>
+            <li><a href="https://play.google.com/music/preview/T6zcdzy2rhnabb56ofchx4dhiuu?t=Time_to_Say_No_-_My_Last_Attempt&u=0" class="download google" onclick="ga('send', 'event', 'Link', 'Click', 'Google Play TTSN');"></a></li>
+            <li><a href="https://open.spotify.com/album/77xhOSfqhicDlra6uoHF2X" class="download spotify" onclick="ga('send', 'event', 'Link', 'Click', 'Spotify TTSN');"></a></li>
           </ul>
 
           <p><small>or just find it where you want</small></p>
@@ -62,15 +63,15 @@
         </div>
         <div class="col-sm-4">
           <ul class="list-unstyled">
-            <li><a href="https://goo.gl/Zee7Wp" class="download apple"></a></li>
-            <li><a href="https://goo.gl/VqK5C3" class="download google"></a></li>
-            <li><a href="https://goo.gl/bEyChf" class="download spotify"></a></li>
+            <li><a href="https://itunes.apple.com/ua/album/capillaries-single/id1250794119" class="download apple" onclick="ga('send', 'event', 'Link', 'Click', 'iTunes Capillaries');"></a></li>
+            <li><a href="https://play.google.com/music/preview/Bbvjd4o2h6fmgme3yadtjqjon5e?t=Capillaries_-_My_Last_Attempt&u=0" class="download google" onclick="ga('send', 'event', 'Link', 'Click', 'Google Play Capillaries');"></a></li>
+            <li><a href="https://open.spotify.com/album/557TGLV4rsAb3KJ0UZAiUx" class="download spotify" onclick="ga('send', 'event', 'Link', 'Click', 'Spotify Capillaries');"></a></li>
           </ul>
 
           <p><small>actually you can find it anywhere</small></p>
         </div>
         <div class="col-sm-4">
-          <p><iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332079330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></p>
+          <p><iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332079330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" ></iframe></p>
         </div>
       </div>
     </div>
