--- a/client/main.html
+++ b/client/main.html
@@ -22,12 +22,11 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <meta property="og:title" content="My Last Attempt Band" />
+  <meta property="og:title" content="My Last Attempt Band – Post-Hardcore, Metalcore," />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://mylastattempt.com/" />
-  <meta property="og:image" content="http://mylastattempt.com/img/logoBig.jpg" />
+  <meta property="og:image" content="http://mylastattempt.com/img/thumb.jpg" />
   <meta property="og:site_name" content="My Last Attempt Band"/>
-  <meta property="og:description" content="Progressive rock band from Ukraine, Kiev.
-  Genre: Progressive Metalcore\Post-Hardcore." />
+  <meta property="og:description" content="Post-Hardcore/Metalcore rock band from Ukraine, Kiev." />
   <meta name="google-site-verification" content="lkdkJpKxpwqFz0sdUdRR6aw3iPZ-AzjqI-Dvc_ublxI" />
 </head>
