--- a/client/main.html
+++ b/client/main.html
@@ -22,7 +22,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <meta property="og:title" content="My Last Attempt Band – Post-Hardcore, Metalcore," />
+  <meta property="og:title" content="My Last Attempt Band – Post-Hardcore, Metalcore" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://mylastattempt.com/" />
   <meta property="og:image" content="http://mylastattempt.com/img/thumb.jpg" />
