Album pre-release

--- a/imports/ui/footer/footer.html
+++ b/imports/ui/footer/footer.html
@@ -1,7 +1,7 @@
 <template name="footer">
   <footer>
     <div class="container">
-      <small>2015 - 2017 <i class="fa fa-copyright" aria-hidden="true"></i></small>
+      <small>LIVE. CREATE. PERFORM.</small>
     </div>
   </footer>
 </template>
