--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
-  <title>My Last Attempt Band</title>
+  <title>My Last Attempt Band – Rock band, Post-Hardcore, Metalcore</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Progressive rock band from Ukraine, Kiev">
+  <meta name="description" content="Rock band, Post-Hardcore/Metalcore, Ukraine, Kiev">
   <meta name="keywords" content="Progressive Metalcore, Post-Hardcore">
   <meta name="author" content="Vlad Kampov">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -22,7 +22,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <meta property="og:title" content="My Last Attempt Band – Post-Hardcore, Metalcore" />
+  <meta property="og:title" content="My Last Attempt – Rock band, Post-Hardcore, Metalcore" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://mylastattempt.com/" />
   <meta property="og:image" content="http://mylastattempt.com/img/thumb.jpg" />
