--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -16,10 +16,37 @@
       </div>
     </div> -->
     <div class="container">
+      <p><br/><br/></p>
+        <h1 class="title">NEW ALBUM IS COMING<br/><small>12 hot songs inside 🔥</small></h1>
+      <p><br/><br/></p>
+        <div class="row">
+          <div class="col-md-4">
+            <p>
+              <img class="image-responsive album" src="/img/equilibrium.png" alt="" width="100%"/><br />
+            </p>
+          </div>
+  
+          <div class="col-md-8 text-right">
+            <p class="album-info">
+              Get online on <b>4<sup>th</sup> of December</b><br/>
+              Come to our <b>Live show</b> in Kyiv on <a href="#tour">15<sup>th</sup> of December</a><br />
+              <a href="https://goo.gl/forms/DR5w5qkB7fc4celR2">Pre-order</a> exlusive physical CD right now!<br/>
+              <small>Be aware! Package contain cool stuff!<br/></small>
+            </p>
+          </div>
+        </div>
+        
+        <!-- <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335868092%3Fsecret_token%3Ds-M8ch0&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p> -->
+       <!--  <iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/342463187&amp;color=222222&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
+      </div>
+      <p><br/><br/></p>
+  </header>
+  <div id="singles">
+    <div class="container">
     <p><br/><br/></p>
-      <h1 class="title">get latest singles<br/><small>and wait for the upcoming album</small></h1>
+      <h1 class="title">get singles<br/><small>before album coming</small></h1>
     <p><br/><br/></p>
-      <div class="row">
+      <div class="row text-center">
         <div class="col-md-4">
           <p>
             <img class="image-responsive album" src="/img/cover_hopeless.jpg" alt="" width="250"/>
@@ -67,8 +94,8 @@
       </div>
       
       <!-- <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335868092%3Fsecret_token%3Ds-M8ch0&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p> -->
-     <!--  <iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/342463187&amp;color=222222&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
+    <!--  <iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/342463187&amp;color=222222&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
     </div>
     <p><br/><br/></p>
-  </header>
+  </div>
 </template>
