Divided by modules. Aded better GA tracking. Inspired preperation.

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -1,6 +1,7 @@
 <body>
   {{> preloader}}
   {{> header}}
+  {{> singles}}
   {{> tour}}
   <div class="row">
   	<!-- <div class="col-md-6"> -->
@@ -9,6 +10,7 @@
   	<!-- </div> -->
     <!--  -->
   </div> 
+  <!-- {{> inspired}} -->
   {{> contacts}}
   {{> footer}}
   <script src="//widget.songkick.com/widget.js"></script>
