--- a/imports/ui/contacts/contacts.html
+++ b/imports/ui/contacts/contacts.html
@@ -6,9 +6,9 @@
       <div>
         <address>
           <span class="h3"><strong>Anastasiia Yurhanova</strong></span><br><br>
-          <span class="h4"><a href="tel:+380631536546">+380 63 153 6546</a><br>
-          <a href="tel:+380991471782">+380 99 147 1782</a><br><br>
-          <a href="mailto:info@mylastattempt.com">info@mylastattempt.com</a></span>
+          <span class="h4"><a href="tel:+380631536546" onclick="ga('send', 'event', 'Link Click', 'Phone', '+380 63 153 6546');">+380 63 153 6546</a><br>
+          <a href="tel:+380991471782" onclick="ga('send', 'event', 'Link Click', 'Phone', '+380 99 147 1782');">+380 99 147 1782</a><br><br>
+          <a href="mailto:info@mylastattempt.com" onclick="ga('send', 'event', 'Link Click', 'Email', 'info@');">info@mylastattempt.com</a></span>
         </address>
       </div>
     </div>
