--- a/imports/ui/header/header.html
+++ b/imports/ui/header/header.html
@@ -16,7 +16,6 @@
       </div>
     </div> -->
     <div class="container">
-      <p><br/><br/></p>
         <h1 class="title">NEW ALBUM IS COMING<br/><small>12 hot songs inside 🔥</small></h1>
       <p><br/><br/></p>
         <div class="row">
@@ -29,9 +28,9 @@
           <div class="col-md-8 text-right">
             <p class="album-info">
               Get online on <b>4<sup>th</sup> of December</b><br/>
-              Come to our <b>Live show</b> in Kyiv on <a href="#tour">15<sup>th</sup> of December</a><br />
-              <a href="https://goo.gl/forms/DR5w5qkB7fc4celR2">Pre-order</a> exlusive physical CD right now!<br/>
-              <small>Be aware! Package contain cool stuff!<br/></small>
+              Come to our <b>Live show</b> in Kyiv on <a href="#tour" onclick="ga('send', 'event', 'Link Click', 'Scroll', 'Tourbox');" >15<sup>th</sup> of December</a><br />
+              <a href="https://goo.gl/forms/DR5w5qkB7fc4celR2" onclick="ga('send', 'event', 'Link Click', 'Preorder', 'Equilibrium');" >Pre-order</a> exlusive physical CD right now!<br/>
+              <small>Be aware! Package contains cool stuff!<br/></small>
             </p>
           </div>
         </div>
@@ -41,61 +40,4 @@
       </div>
       <p><br/><br/></p>
   </header>
-  <div id="singles">
-    <div class="container">
-    <p><br/><br/></p>
-      <h1 class="title">get singles<br/><small>before album coming</small></h1>
-    <p><br/><br/></p>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <p>
-            <img class="image-responsive album" src="/img/cover_hopeless.jpg" alt="" width="250"/>
-          </p>
-          <ul class="list-inline" style="font-size: 25px;margin-bottom: 0;">
-            <li><a href="https://itunes.apple.com/ua/album/hopeless-single/id1276592213" onclick="ga('send', 'event', 'Link', 'Click', 'iTunes Hopeless');" target="_blank"><i class="fa fa-apple" aria-hidden="true"></i></a></li>
-            <li><a href="https://play.google.com/music/m/Bem773l5zepsyj2k43odkyq6flq?t=Hopeless_-_My_Last_Attempt"  onclick="ga('send', 'event', 'Link', 'Click', 'Google Play Hopeless');" target="_blank"><i class="fa fa-play" aria-hidden="true"></i></a></li>
-            <li><a href="https://open.spotify.com/album/6jMyJSMG9VIzKPZ1ZOpbJy" onclick="ga('send', 'event', 'Link', 'Click', 'Spotify Hopeless');" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.amazon.com/dp/B0757VQQ4T/ref=dm_ws_tlw_trk1" onclick="ga('send', 'event', 'Link', 'Click', 'Amazon Hopeless');" target="_blank"><i class="fa fa-amazon" aria-hidden="true"></i></a></li>
-            <li><a href="https://soundcloud.com/my-last-attempt/hopeless" onclick="ga('send', 'event', 'Link', 'Click', 'SoundCloud Hopeless');" target="_blank"><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
-          </ul>
-
-          <p><small>or in your favorite service whatever it is</small></p>
-        </div>
-
-        <div class="col-md-4">
-          <p>
-            <img class="image-responsive album" src="/img/album.jpg" alt="" width="250"/>
-          </p>
-          <ul class="list-inline" style="font-size: 25px;margin-bottom: 0;">
-            <li><a href="https://itunes.apple.com/ua/album/capillaries-single/id1250794119" onclick="ga('send', 'event', 'Link', 'Click', 'iTunes Capillaries');" target="_blank"><i class="fa fa-apple" aria-hidden="true"></i></a></li>
-            <li><a href="https://play.google.com/music/preview/Bbvjd4o2h6fmgme3yadtjqjon5e?t=Capillaries_-_My_Last_Attempt&u=0"  onclick="ga('send', 'event', 'Link', 'Click', 'Google Play Capillaries');" target="_blank"><i class="fa fa-play" aria-hidden="true"></i></a></li>
-            <li><a href="https://open.spotify.com/album/557TGLV4rsAb3KJ0UZAiUx" onclick="ga('send', 'event', 'Link', 'Click', 'Spotify Capillaries');" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.amazon.com/Capillaries-My-Last-Attempt/dp/B0737Y259J/ref=sr_1_3?s=dmusic&ie=UTF8&qid=1506348889&sr=1-3-mp3-albums-bar-strip-0&keywords=My+Last+Attempt" onclick="ga('send', 'event', 'Link', 'Click', 'Amazon Capillaries');" target="_blank"><i class="fa fa-amazon" aria-hidden="true"></i></a></li>
-            <li><a href="https://soundcloud.com/my-last-attempt/capillaries-single" onclick="ga('send', 'event', 'Link', 'Click', 'SoundCloud Capillaries');" target="_blank"><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
-          </ul>
-
-          <p><small>actually you can find it anywhere</small></p>
-        </div>
-
-        <div class="col-md-4">
-          <p>
-            <img class="image-responsive album" src="/img/cover_ttsn.jpg" alt="" width="250"/>
-          </p>
-          <ul class="list-inline" style="font-size: 25px;margin-bottom: 0;">
-            <li><a href="https://itunes.apple.com/album/id1255934532" onclick="ga('send', 'event', 'Link', 'Click', 'iTunes TTSN');" target="_blank"><i class="fa fa-apple" aria-hidden="true"></i></a></li>
-            <li><a href="https://play.google.com/music/preview/T6zcdzy2rhnabb56ofchx4dhiuu?t=Time_to_Say_No_-_My_Last_Attempt&u=0"  onclick="ga('send', 'event', 'Link', 'Click', 'Google Play TTSN');" target="_blank"><i class="fa fa-play" aria-hidden="true"></i></a></li>
-            <li><a href="https://open.spotify.com/album/77xhOSfqhicDlra6uoHF2X" onclick="ga('send', 'event', 'Link', 'Click', 'Spotify TTSN');" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.amazon.com/Time-to-Say-No-Explicit/dp/B073TD55LW/ref=sr_1_1?ie=UTF8&qid=1506348713&sr=8-1&keywords=my+last+attempt+time+to+say+no" onclick="ga('send', 'event', 'Link', 'Click', 'Amazon TTSN');" target="_blank"><i class="fa fa-amazon" aria-hidden="true"></i></a></li>
-            <li><a href="https://soundcloud.com/my-last-attempt/time-to-say-no" onclick="ga('send', 'event', 'Link', 'Click', 'SoundCloud TTSN');" target="_blank"><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
-          </ul>
-
-          <p><small>or just find it where you want</small></p>
-        </div>
-      </div>
-      
-      <!-- <p><iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335868092%3Fsecret_token%3Ds-M8ch0&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></p> -->
-    <!--  <iframe width="75%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/342463187&amp;color=222222&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
-    </div>
-    <p><br/><br/></p>
-  </div>
 </template>
