--- a/imports/ui/social/social.html
+++ b/imports/ui/social/social.html
@@ -13,15 +13,21 @@
 				</div>
 				<div class="col-sm-6 text-right">
 					<ul class="list-inline">
-						<li><a class="fb" href="//facebook.com/mylastattemptband/"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
-						<li><a class="insta" href="//instagram.com/mylastattemptband/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-						<li><a class="twi" href="//twitter.com/MyLastAttempt_"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a class="soundcloud" href="//soundcloud.com/my-last-attempt"><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
-						<li><a class="vk" href="//vk.com/mylastattempt"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-						<li><a class="youtube" href="//youtube.com/channel/UCwzqedkAOWy6Hk_no8gZjQA"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+						<li><a onclick="ga('send', 'event', 'Link Click', 'Facebook', 'Social accout');" class="fb" href="//facebook.com/mylastattemptband/"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
+						<li><a onclick="ga('send', 'event', 'Link Click', 'Instagram', 'Social accout');" class="insta" href="//instagram.com/mylastattemptband/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						<li><a onclick="ga('send', 'event', 'Link Click', 'Twitter', 'Social accout');" class="twi" href="//twitter.com/MyLastAttempt_"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a onclick="ga('send', 'event', 'Link Click', 'SoundCloud', 'Social accout');" class="soundcloud" href="//soundcloud.com/my-last-attempt"><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
+						<li><a onclick="ga('send', 'event', 'Link Click', 'VK', 'Social accout');" class="vk" href="//vk.com/mylastattempt"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+						<li><a onclick="ga('send', 'event', 'Link Click', 'YouTube', 'Social accout');" class="youtube" href="//youtube.com/channel/UCwzqedkAOWy6Hk_no8gZjQA"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+						<li><a onclick="ga('send', 'event', 'Link Click', 'Telegram', 'Social accout');" class="telegram" href="//t.me/mylastattempt"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="telegram-channel">
+			<p><small><i class="fa fa-telegram" aria-hidden="true" style="color: white"></i> Теперь у нас есть <a onclick="ga('send', 'event', 'Link Click', 'Telegram', 'Social accout');" href="//t.me/mylastattempt">канал в Telegram</a></small></p>
 		</div>
 	</div>
 </template>
