--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -10,7 +10,7 @@
   	<!-- </div> -->
     <!--  -->
   </div> 
-  <!-- {{> inspired}} -->
+  {{> inspired}}
   {{> contacts}}
   {{> footer}}
   <script src="//widget.songkick.com/widget.js"></script>
