--- a/imports/ui/inspired/inspired.html
+++ b/imports/ui/inspired/inspired.html
@@ -13,7 +13,7 @@
                 <i class="fa fa-vk" aria-hidden="true"></i>
               </a>
               and
-              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Kampov');"  href="">
+              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Kampov');"  href="https://itunes.apple.com/ua/playlist/my-last-attempt-inspired-vlad-kampov/pl.46fb94fc44d642cc8f80c051534d362e">
                 <i class="fa fa-apple" aria-hidden="true"></i>
               </a>
             </small>
@@ -25,11 +25,11 @@
           <div class="links">
             <small>
               Also avalaible on
-              <a onclick="ga('send', 'event', 'Link Click', 'VK', 'Playlist Benko');" href="https://vk.com/mylastattempt?z=audio_playlist-96510423_1">
+              <a onclick="ga('send', 'event', 'Link Click', 'VK', 'Playlist Benko');" href="https://vk.com/mylastattempt?z=audio_playlist-96510423_4">
                 <i class="fa fa-vk" aria-hidden="true"></i>
               </a>
               and
-              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Benko');"  href="">
+              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Benko');"  href="https://itunes.apple.com/ua/playlist/my-last-attempt-inspired-alexander-benko/pl.8313923c05c748f6a44a85a3e710aff8">
                 <i class="fa fa-apple" aria-hidden="true"></i>
               </a>
             </small>
@@ -41,11 +41,11 @@
           <div class="links">
             <small>
               Also avalaible on
-              <a onclick="ga('send', 'event', 'Link Click', 'VK', 'Playlist Timur');" href="https://vk.com/mylastattempt?z=audio_playlist-96510423_1">
+              <a onclick="ga('send', 'event', 'Link Click', 'VK', 'Playlist Timur');" href="https://vk.com/mylastattempt?z=audio_playlist-96510423_2">
                 <i class="fa fa-vk" aria-hidden="true"></i>
               </a>
               and
-              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Timur');"  href="">
+              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Timur');"  href="https://itunes.apple.com/ua/playlist/my-last-attempt-inspired-timur-postolyuk/pl.ee29bf9e11b845c080eb1193f9876f05">
                 <i class="fa fa-apple" aria-hidden="true"></i>
               </a>
             </small>
@@ -58,11 +58,11 @@
           <div class="links">
             <small>
               Also avalaible on
-              <a onclick="ga('send', 'event', 'Link Click', 'VK', 'Playlist Egor');" href="https://vk.com/mylastattempt?z=audio_playlist-96510423_1">
+              <a onclick="ga('send', 'event', 'Link Click', 'VK', 'Playlist Egor');" href="https://vk.com/mylastattempt?z=audio_playlist-96510423_5">
                 <i class="fa fa-vk" aria-hidden="true"></i>
               </a>
               and
-              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Egor');"  href="">
+              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Egor');"  href="https://itunes.apple.com/ua/playlist/my-last-attempt-inspired-egor-nedobega/pl.1a399dd28f5d47928338dc77f2c8eb7e">
                 <i class="fa fa-apple" aria-hidden="true"></i>
               </a>
             </small>
@@ -74,11 +74,11 @@
           <div class="links">
             <small>
               Also avalaible on
-              <a onclick="ga('send', 'event', 'Link Click', 'VK', 'Playlist Zhuk');" href="https://vk.com/mylastattempt?z=audio_playlist-96510423_1">
+              <a onclick="ga('send', 'event', 'Link Click', 'VK', 'Playlist Zhuk');" href="https://vk.com/mylastattempt?z=audio_playlist-96510423_3">
                 <i class="fa fa-vk" aria-hidden="true"></i>
               </a>
               and
-              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Zhuk');"  href="">
+              <a onclick="ga('send', 'event', 'Link Click', 'Apple Music', 'Playlist Zhuk');"  href="https://itunes.apple.com/ua/playlist/my-last-attempt-inspired-grigoriy-zhuk/pl.0fe851a117e64745a5c5b5d316105ce3">
                 <i class="fa fa-apple" aria-hidden="true"></i>
               </a>
             </small>
